--- a/k8s/web.yaml
+++ b/k8s/web.yaml
@@ -24,6 +24,10 @@ spec:
             secretKeyRef:
               name: openai-secret
               key: OPENAI_API_KEY
+        - name: OPENAI_MODEL
+          value: gpt-4.1-mini
+        - name: OPENAI_BASE_URL
+          value: https://api.openai.com/v1
 ---
 apiVersion: v1
 kind: Service
