Use postgres password for default database URL

--- a/k8s/analyzer-cronjob.yaml
+++ b/k8s/analyzer-cronjob.yaml
@@ -23,5 +23,5 @@ spec:
             - name: OPENAI_BASE_URL
               value: https://api.openai.com/v1
             - name: DATABASE_URL
-              value: postgres://postgres:example@postgres:5432/postgres?sslmode=disable
+              value: postgres://postgres:postgres@postgres:5432/postgres?sslmode=disable
           restartPolicy: OnFailure
