--- a/web/package.json
+++ b/web/package.json
@@ -2,15 +2,15 @@
   "name": "futuna-web",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8086",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 8086"
   },
   "dependencies": {
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tabulator": "0.15.3",
+    "react-tabulator": "0.21.0",
     "tabulator-tables": "5.5.0"
   }
 }
