--- a/web/package.json
+++ b/web/package.json
@@ -12,5 +12,6 @@
     "react-dom": "18.2.0",
     "react-tabulator": "0.21.0",
     "tabulator-tables": "5.5.0"
+    ,"react-datepicker": "4.19.0"
   }
 }
